--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>xyz.synse</groupId>
     <artifactId>PacketNet</artifactId>
-    <version>1.4</version>
+    <version>1.4.1</version>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
@@ -24,6 +24,12 @@
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.70</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
