--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -61,8 +61,9 @@ jobs:
         # queries: security-extended,security-and-quality
 
     - name: Setup Java JDK
-      uses: actions/setup-java@v1.3.0
+      uses: actions/setup-java@v3
       with:
+        distribution: 'zulu'
         java-version: 20
 
 
